# pmb887x-dev

./: .editorconfig  .gitignore  PMB8876_dev.txt  README.md  bin2gpio.pl  bin2reg.pl  boot.pl  build.sh  chaos-boot.pl  dump_reg.pl  get_idc.pl  get_regs_header.pl  get_regs_struct.pl  regs.txt
.github/workflows/: ci.yml
another_timer_test/: CMakeLists.txt  Makefile  bogomips.c  handlers.S  interrupt.c  linker.ld  main.c  main.h  run.sh
boot/: Makefile  bin2hex.pl  chaos_x85.S  chaos_x85.hex  linux_boot.S  pv_boot_x85.S
boot/qemu_wait_serial/: Makefile  main.S  qemu_wait_serial.h  qemu_wait_serial.hex
bootloader/: Makefile  main.c  test.ld
cfi_test/: CMakeLists.txt  Makefile  main.c  run.sh
cgsn/: SieCGSN.pm  devices.ini  dump_gpio_table.pl  dump_irq_table.pl  read.pl  send_file.pl
chaos/: boot.asm  bootX85.asm
charger_test/: main.c  main.h  run.sh
common/: d1601aa_i2c.h  gpio.h  i2c.c  i2c.h  init.S  linker.ld  pmb8876.c  pmb8876.h  pmb8876_io.h  pmb8876_regs.h  printf.c  printf.h  stopwatch.c  stopwatch.h  tcm.c  tcm.h
common/cmake/: SiemensBootcode.cmake
common/eabi/: div.S  div.c
common/init/: extram.S  extram.c  intram.S  intram.c
common/linker/: extram.ld  intram.ld
common/perl/: regs.pm
dif_test/: Makefile  run.sh
dmac_test/: main.c
doc/: PMB8876_dev.txt  clkman.h  gpio.h  pmb8875_dev_155.txt  reg8876.h
doc/wine_baudrate_fix/: README
dump-pmic/: main.c
ebu_test/: CMakeLists.txt  main.c  run.sh
elfs/armsniffer/: CMakeLists.txt  README.txt  REAME  cmake.sh  main.c
elfs/armsniffer/sniffer/: arm_defs.h  da_handler.S  sniffer.c  sniffer.h  system.c  system.h
example/extram/: CMakeLists.txt  main.c  run.sh
example/intram/: CMakeLists.txt  main.c  run.sh
examples/: clean.sh
examples/adc/: Makefile  main.c
examples/another_timer/: CMakeLists.txt  Makefile  handlers.S  main.h  run.sh
examples/apoxi_open_boot/: CMakeLists.txt  init.S  main.c  tcm.ld
examples/apoxi_patch_mmu/: init.S  main.c  run.sh  tcm.ld
examples/board_dumper/: main.c
examples/boot-addon/: Makefile  main.c  md5.c  md5.h
examples/brom/: CMakeLists.txt  main.c
examples/cfi/: main.c
examples/charger/: main.c
examples/chip_id/: main.c
examples/cpu_id/: main.c
examples/dif/: main.c  modes.php  run.sh
examples/dmac/: main.c
examples/dump-pmic/: main.c
examples/exti/: main.c
examples/flash_info/: main.c  test.S
examples/gimmick/: main.c
examples/gptu/: main.c
examples/gsm_irq/: main.c
examples/hw_i2c/: main.c  run.sh
examples/hw_i2c_8875/: main.c  run.sh
examples/hwid_read/: main.c
examples/i2c/: CMakeLists.txt  Makefile  main.c  run.sh
examples/instr_cnt/: Makefile
examples/io_dump/: main.c  run.sh
examples/irq_finder/: CMakeLists.txt  Makefile  main.c
examples/irq_src/: main.c
examples/keypad/: Makefile  main.c
examples/memtester/: CMakeLists.txt  flashes.txt  main.c  run.sh
examples/mmc/: main.c
examples/new_test/: Makefile  main.c
examples/new_test2/: main.c
examples/nvic_priority/: main.c
examples/pasic_test/: main.c
examples/pll/: Makefile  main.c
examples/reg_tester/: main.c  run.sh
examples/scan_exti/: main.c  run.sh
examples/sram_tester/: CMakeLists.txt  Makefile  main.c  run.sh
examples/str_unaligned_access/: main.c
examples/test_bootloader/: main.c  main.h
examples/uart_irq/: main.c  run.sh
examples/usart_dma/: CMakeLists.txt  main.c  run.sh
flash_info/: dump.php  flashes.txt  main.c
gptu_test/: main.c
gsm_irq_test/: handlers.S  main.c  main.h
hw_i2c_test/: main.c  run.sh
i2c-hook-patch/: Makefile  gen_patch.pl  linker.ld  main.c  main.h  printf.c
i2c_test/: Makefile  main.c  main.h  run.sh
instr_cnt/: main.c
io_bridge/: CMakeLists.txt  Makefile  io_bridge.pm  log.txt  main.c  main.h  pll_test.pm  run.sh  screen.php  test.S  test.pm
io_dump/: CMakeLists.txt  Makefile  da_handler.S  main.c  run.sh
irq_finder/: Makefile  main.c
irq_src_test/: main.c
irq_test/: Makefile  main.c  run.sh  test.ld
keypad_test/: main.c
lib/: CMakeLists.txt  cpu.c  cpu.h  d1601aa.h  gpio.h  i2c.c  i2c.h  libc.c  libc.h  pmb887x.h  printf.h  rules.mk  stopwatch.c  stopwatch.h  toolchain.cmake  usart.c  usart.h  wdt.c  wdt.h
lib/data/: common_regs.cfg  pmb8875.cfg  pmb8876.cfg
lib/init/: reset_handler.c  start.S  (+1 more)
new_lib/: main.c
new_test/: Makefile  main.c
pasic_tets/: Makefile
pickoff_sound_test/: Makefile  main.c  run.sh  test.S
pll_test/: Makefile  main.c
scan_exti/: Makefile  main.c
sram_tester/: Makefile
test_bootloader/: main.c  main.h  test.asm
test_exti/: main.c
tools/: bin2code.pl  bin2reg.pl  cfi.pl  gen_boards_qemu.pl  gen_cpu_modules_qemu.pl  gen_decoder.pl  gen_gpio_mux.pl  gen_headers.pl  gen_headers_qemu.pl  gen_json.pl  gen_machines_qemu.pl  gen_pinctrl.pl  gen_qemu_flashes.pl  gen_symbols.pl  get_shift_mask.pl  parse_swilib.pl  qemu.sh  reg.pl  strace.pl  test.pl  usartd.pl
uart_irq_test/: CMakeLists.txt  Makefile  baud.c  main.c  run.sh
unit/: CMakeLists.txt  README.md  run.sh  test.c  test.h
unit/adc/: test.c
unit/afc/: test.c
unit/cfi-intel/: buffer-abort.c  cfi.c  cfi.h  efa-rw.c  otp-rw.c  rw.c  test.c
unit/dif-v1/: common.c  dif-v1.c  dif-v1.h  dma.c  test-dma.c  test.c
unit/dif-v2/: dif-v2.c  dif-v2.h  lcd.c  main.c  test-dma.c  test.c
unit/dmac/: main.c  test.c
unit/dsp/: test.c
unit/ebu/: test.c
unit/gpio/: monitor.c  test.c
unit/gprscu/: test.c
unit/gptu/: test.c
unit/i2c-v1/: i2c-v1.c  i2c-v1.h  test.c
unit/i2c-v2/: i2c-v2.c  i2c-v2.h  main.c  test-dma.c  test.c
unit/keypad/: test.c
unit/mod/: test.c
unit/pll/: extram-intram.ld  loader.S  measure.S  test.c
unit/rtc/: test.c
unit/sccu/: test.c
unit/scu/: reset.c  test.c  watchdog.c  watchdog.h  wdt-reset.c
unit/sim/: README.md  test-card.c  test-dma.c  test.c
unit/ssc/: ssc.c  ssc.h  test-dma.c  test.c
unit/stm/: test.c
unit/tcm/: execution.S  test.c
unit/tpu/: gp.c  ram.c  rf-ssc.c  test.c
unit/usart/: main.c  test-dma.c  test.c  usart.c  usart.h
unit/usb/: test.c
unit/vic/: test.c
wine_baudrate_fix/: Makefile  strange.c
(+124 files in other folders)
