cmake_minimum_required(VERSION 3.15)

set(CMAKE_TOOLCHAIN_FILE ../lib/toolchain.cmake)

project(unit LANGUAGES C ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
option(TEST_COLOR "Use ANSI colors in test output" OFF)

add_subdirectory(${PMB887X_LIB_PATH} libpmb887x)

add_library(test_support OBJECT test.c)
target_compile_options(test_support PUBLIC -Os -Wall -Wextra -Werror)
target_include_directories(test_support PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
if(TEST_COLOR)
	target_compile_definitions(test_support PUBLIC TEST_COLOR=1)
endif()

function(add_peripheral_test name)
	add_executable(${name} ${ARGN})
	target_compile_options(${name} PUBLIC -Os -Wall -Wextra -Werror)
	target_link_libraries(${name} PUBLIC pmb887x test_support)
	target_output_bin(${name})
endfunction()

add_peripheral_test(stm stm/test.c)
add_peripheral_test(dmac dmac/test.c)
add_peripheral_test(mod mod/test.c)
add_peripheral_test(scu scu/test.c scu/watchdog.c)
add_peripheral_test(scu-wdt-reset scu/wdt-reset.c scu/watchdog.c)
add_peripheral_test(adc adc/test.c)
add_peripheral_test(rtc rtc/test.c)
add_peripheral_test(vic vic/test.c)
add_peripheral_test(gptu gptu/test.c)
add_peripheral_test(sccu sccu/test.c)
add_peripheral_test(tpu tpu/test.c)
add_peripheral_test(tpu-ram tpu/ram.c)
add_peripheral_test(tpu-rf-ssc tpu/rf-ssc.c)
add_peripheral_test(tcm tcm/test.c tcm/execution.S)
add_peripheral_test(i2c-v1 i2c-v1/test.c i2c-v1/i2c-v1.c)
add_peripheral_test(i2c-v2 i2c-v2/test.c i2c-v2/i2c-v2.c)
add_peripheral_test(i2c-v2-dma i2c-v2/test-dma.c i2c-v2/i2c-v2.c)
add_peripheral_test(ssc ssc/test.c ssc/ssc.c)
add_peripheral_test(ssc-dma ssc/test-dma.c ssc/ssc.c)
add_peripheral_test(dif-v1 dif-v1/test.c dif-v1/dif-v1.c dif-v1/common.c)
add_peripheral_test(dif-v1-dma dif-v1/test-dma.c dif-v1/dma.c dif-v1/common.c)
add_peripheral_test(usart usart/test.c usart/usart.c)
add_peripheral_test(usart-dma usart/test-dma.c usart/usart.c)
add_peripheral_test(dif-v2 dif-v2/test.c dif-v2/dif-v2.c)
add_peripheral_test(dif-v2-dma dif-v2/test-dma.c dif-v2/dif-v2.c)
add_peripheral_test(cfi-intel cfi-intel/test.c cfi-intel/cfi.c)
add_peripheral_test(cfi-intel-rw cfi-intel/rw.c cfi-intel/cfi.c)
add_peripheral_test(cfi-intel-efa-rw cfi-intel/efa-rw.c cfi-intel/cfi.c)
add_peripheral_test(cfi-intel-otp-rw cfi-intel/otp-rw.c cfi-intel/cfi.c)
