cmake_minimum_required(VERSION 3.15)

set(BOOT custom)
set(LDSCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/tcm.ld")
set(CMAKE_TOOLCHAIN_FILE ../../lib/toolchain.cmake)

project(app LANGUAGES C ASM)
if (BOOT STREQUAL "extram")
	add_subdirectory(${PMB887X_LIB_PATH} libpmb887x)
endif()

add_executable(app main.c init.S)
target_compile_options(app PUBLIC -Os -fno-toplevel-reorder)
if (BOOT STREQUAL "extram")
	target_link_libraries(app PUBLIC pmb887x)
else()
	target_compile_options(app PUBLIC -fPIE -pie)
	target_link_options(app PUBLIC -Wl,-Ttext=0x00000000)
endif()
target_output_bin(app)
